added checklist to todos

--- a/src/styles.css
+++ b/src/styles.css
@@ -236,3 +236,11 @@ body {
 .dragging {
     opacity: 0.5;
 }
+
+.checklistAll {
+    display: none;
+}
+
+.checkedOutItem {
+    text-decoration: line-through;
+}
