--- a/src/styles.css
+++ b/src/styles.css
@@ -316,3 +316,51 @@ menu>button {
     font-size: 2em;
     line-height: 3em;
 }
+
+dialog {
+    background-color: var(--tertiary-color);
+    background-image: linear-gradient(0.375turn, rgb(0, 0, 0, 0), rgb(0, 0, 0, 0.2) 30%);
+    border-radius: 0.5em;
+    color: var(--secondary-color);
+    border: 1px solid var(--quaternary-color)
+}
+
+form p {
+    margin-top: 1em;
+    display: flex;
+    justify-content: space-between;
+}
+
+form menu {
+    margin-top: clamp(1em, 2em, 4em);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+form input {
+    margin-left: clamp(1em, 2em, 2.5em);
+    padding: 1em 2em;
+    border-radius: 0.5em;
+    background-color: var(--secondary-color);
+}
+
+
+
+form button {
+    background-color: var(--primary-color);
+    background-image: linear-gradient(0.375turn, rgb(0, 0, 0, 0), rgb(0, 0, 0, 0.2) 30%);
+}
+
+form button:hover {
+    box-shadow: 7px 2px 5px black, inset 2px 2px 1px rgb(255, 255, 255, 0.5), inset -2px -2px 1px rgb(0, 0, 0, 0.5);
+}
+
+.submitExtendedTodoDialog {
+    margin-left: clamp(1em, 5em, 8em);
+    margin-right: clamp(1em, 5em, 8em)
+}
+
+.checklistAll p {
+    margin-top: clamp(1em, 2em, 4em);
+}
