--- a/src/styles.css
+++ b/src/styles.css
@@ -214,6 +214,8 @@ menu>button {
     border-radius: 0.5em;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 20px 30px;
     background-image: linear-gradient(0.375turn, rgb(0, 0, 0, 0), rgb(0, 0, 0, 0.2) 30%);
+    text-align: center;
+    line-height: 1em;
 }
 
 .container .toDoCard:hover .face.face1 {
@@ -232,12 +234,16 @@ menu>button {
 
 .container .toDoCard:hover .face.face1 #clickNotice {
     opacity: 1;
-    color: white;
+    color: var(--quaternary-color);
+    text-align: center;
+    margin: 0.5em 5.5em;
 }
 
 .container .toDoCard .face.face1 .content {
     opacity: 0.2;
     transition: 0.5s;
+    text-align: center;
+    color: var(--secondary-color)
 }
 
 .container .toDoCard:hover .face.face1 .content {
@@ -274,10 +280,11 @@ menu>button {
     border-top-right-radius: 10px;
     background-color: var(--tertiary-color);
     border-radius: 0.5em;
+    text-align: center;
 }
 
 .container .toDoCard .face.face2 .content p {
-    margin: 0;
+    margin-top: 1em;
     padding: 0;
 }
 
@@ -363,4 +370,32 @@ form button:hover {
 
 .checklistAll p {
     margin-top: clamp(1em, 2em, 4em);
+}
+
+.upcomingToDo {
+    border: 1px solid var(--quaternary-color);
+    padding: 0.5em 1em;
+    border-radius: 0.5em;
+}
+
+#extendedTodoDialogForm {
+    line-height: 3.5em;
+}
+
+#extendedTodoDialogForm>menu>button {
+    margin: 0;
+}
+
+#extendedStatus {
+    padding: 1em 3.2em;
+    border-radius: 0.5em;
+}
+
+.todosToday,
+.todosNext7Days {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 0.5em;
+    margin: 0 1.5em;
 }
