--- a/src/styles.css
+++ b/src/styles.css
@@ -24,7 +24,8 @@
 
 
 html {
-    color: white
+    color: white;
+    font-size: 16px;
 }
 
 :root {
@@ -65,6 +66,11 @@ body {
     background-color: inherit;
 }
 
+h1 {
+    font-size: 1.5rem;
+    margin: 1.4em auto;
+}
+
 .nav {
     display: grid;
     grid-template-columns: 1fr;
@@ -78,10 +84,14 @@ body {
     align-items: center;
 }
 
+nav p {
+    margin: 3em auto;
+}
+
 button {
     border-radius: 0.5em;
     padding: 1em;
-    min-width: 7em;
+    min-width: 10em;
     max-height: 4em;
     border: 1px solid var(--quaternary-color);
     color: white
@@ -89,7 +99,6 @@ button {
 
 .nav button {
     background-color: var(--primary-color);
-    max-width: 7em;
     background-image: linear-gradient(0.375turn, rgb(0, 0, 0, 0), rgb(0, 0, 0, 0.2) 30%);
 }
 
@@ -110,6 +119,15 @@ menu>button {
 .projectList {
     display: grid;
     align-items: start;
+    gap: 1em;
+}
+
+#newProjectDialogForm {
+    line-height: 3.4em;
+}
+
+#newProjectDialogForm button {
+    margin: 0;
 }
 
 .panel {
@@ -384,6 +402,10 @@ form button:hover {
 
 #extendedTodoDialogForm>menu>button {
     margin: 0;
+}
+
+.closeExtendedTodoDialog {
+    margin-left: auto;
 }
 
 #extendedStatus {
