--- a/src/styles.css
+++ b/src/styles.css
@@ -347,11 +347,19 @@ dialog {
     background-image: linear-gradient(0.375turn, rgb(0, 0, 0, 0), rgb(0, 0, 0, 0.2) 30%);
     border-radius: 0.5em;
     color: var(--secondary-color);
-    border: 1px solid var(--quaternary-color)
+    border: 1px solid var(--quaternary-color);
+    min-width: 35rem;
 }
 
 form p {
     margin-top: 1em;
+    display: flex;
+    justify-content: space-between;
+}
+
+
+form .checklistContainer p {
+    margin-top: 0.1em;
     display: flex;
     justify-content: space-between;
 }
